--- a/index.html
+++ b/index.html
@@ -56,17 +56,12 @@ would waste resources. In contrast, the co-existence of multiple tasks in the da
 compensate for the variable demand for resources by resource-aware scheduling. Such techniques
 are especially useful in (but not limited to) computationally-intensive applications, where the
 response time is not the primary concern.
-The first part of this thesis assumes the perspective of a data center owner, who wants to
-use owned resources in efficient manner. For example, processing speed can be scaled down to
+ For example, processing speed can be scaled down to
 
 save energy, memory can be shared or distributed, and cooperating processes can be migrated
-closer to each other in the network to save bandwidth. In the first part of this thesis, we focus
-on the last aspect and we show how it leads to efficient usage of an interconnecting network
-in a data center. Optimization of this resource is critical for performing efficient large-scale
+closer to each other in the network to save bandwidth. Optimization of this resource is critical for performing efficient large-scale
 computations, as those involve multiple machines that cooperate over network. To this end, we
 will make use of a sophisticated control system, called virtualization.
-In the second part of this thesis, we shift our attention away from the optimization of data
-center network and focus on fundamental aspects of data transmission in the modern Internet.
 The transmitted data is split into portions called packets, which are sent independently, and
 the task of relying a packet to its destination, called packet forwarding, is performed by network
 devices called routers. A single network is usually connected with multiple adjacent networks,
@@ -76,8 +71,7 @@ rules, each corresponding to some network. The number of forwarding rules stored
 Internet routers is almost as numerous as the total number of networks, which leads to enormous
 forwarding tables to manage. We investigate the increasingly common scenario, where the
 number of rules exceeds the available memory capacity.
-The second part of this thesis assumes the perspective of an Internet Service Provider (ISP)
-that owns and maintains the connecting physical infrastructure, such as routers. Typically,
+Typically,
 routers located near the core of the Internet, e.g. in top-tier networks owned by large ISP, store
 a sizeable number of forwarding rules, and this number continues to grow with the size of the
 Internet. As the size of forwarding tables grows, it inevitably exceeds the available memory of
@@ -87,12 +81,8 @@ memory for the device. We focus on an alternative approach, where the router con
 operate with insufficient memory to store the whole forwarding table. In this approach, it is
 important to preserve the correctness and efficiency of packet forwarding: both are crucial in
 minimizing data transfer latency and maximizing the throughput.
-1.1
- Machine Virtualization in Data Centers
 To use the data center’s interconnecting network efficiently, cooperating computational tasks
-should be placed close to each other and close to the data they process. Algorithmic techniques
-presented in the first part of this thesis rely upon logical isolation of a computation from the
-physical machine that performs the computation. This gives a possibility to manage the physical
+should be placed close to each other and close to the data they process. This gives a possibility to manage the physical
 placement of a computation in a way that is transparent to the computation. A particular piece
 of technology that provides the flexibility in placement of computations is virtualization.
 Virtualization provides an abstraction layer, called the virtual machine, for the underlying
@@ -105,7 +95,6 @@ the main purpose of virtualization is to provide the complete and non-restricted
 for the client that is isolated from the management software and other clients’ tasks. The guest
 operating system is restricted to the virtualized environment: it has the perspective of housing
 a whole computer system.
-1.1.1
  Machine Migration
 Besides providing an abstraction layer, mature virtualization solutions suited for data centers
 such as Xen [XEN], KVM [KVM], Hyper-V [HyV], VMware ESXi [VME], provide several control
@@ -116,13 +105,7 @@ a different physical machine. This is possible without shutting down the guest o
 and hence it provides a powerful resource-management tool that is transparent to clients.
 Such mechanisms play an important role in load balancing in the data center and allow for
 sophisticated optimizations such as reducing network distance between communicating virtual
-machines. In this thesis, we focus on migration capabilities provided by modern virtualization
-techologies used for efficient usage of important resource in the data center — the network
-bandwidth. The problem central to the first part of this thesis is stated as follows:
-How to assign virtual machines to physical machines to optimize network usage?
-We elaborate more in the subsequent subsection.
-1.1.2
- Virtual Network Embedding
+machines.
 The computing power of a single virtual machine is usually insufficient for the client, as the
 resources of a virtual machine are limited by resources available to its host. Therefore, data
 centers provide its resources as a sizeable set of virtual machines connected by a network. Col-
@@ -131,9 +114,8 @@ where the cooperating virtual machines are refered to as nodes of a virtual netw
 antee certain quality of service (QoS ) for multitude of co-existing virtual networks, up-front
 bandwidth reservations are required. However, the generality of performed calculations results
 in unpredictibility of communication patterns and poses a challenge in optimization of band-
-width reservations. In this thesis, we provide algorithms for efficient management of network
-reservations without any assumptions about communication patterns.
-To measure the quality of resource management strategy, in Part I we state formal opti-
+width reservations. 
+To measure the quality of resource management strategy we state formal opti-
 mization problems; for now, we only briefly sketch it. Physical components of a data center
 are modelled as a graph called a substrate network, in which vertices correspond to physical
 machines, and edges correspond to an interconnecting network. A communication cost between
