--- a/index.html
+++ b/index.html
@@ -231,8 +231,9 @@
 
                 Internship supervision:
                 <ul>
-                  <li>Julien Dallot, TELECOM Paris, France, project "Virtual machine migration in star topologies", 03.2022&ndash;now (the second interns)</li>
-                  <li>Atoli Huppé, ENSTA Paris, France, project "Adaptive compression algorithms", 10.2021&ndash;now</li>
+                  <li>Amirmehdi Fesharaki, Sharif University of Technology, Iran, project "Caching with dependencies", 03.2022&ndash;09.2022</li>
+                  <li>Julien Dallot, TELECOM Paris, France, project "Virtual machine migration in star topologies", 03.2022&ndash;09.2022 (the second interns)</li>
+                  <li>Atoli Huppé, ENSTA Paris, France, project "Adaptive compression algorithms", 03.2022&ndash;08.2022</li>
                   <li>Anton Paramonov, St. Petersburg State University, Russia, project self-adjusting linear networks, 12.2021&ndash;01.2022</li>
                   <li>Marzieh Aliakbarpour, Sharif University of Technology, Iran, project "Online list factoring", 10.2021&ndash;01.2022</li>
                   <li>Siddhesh Kalekar, IIT Delhi, India, project "Offline list access with precedence constraints", 05.2021&ndash;08.2021</li>
