--- a/index.html
+++ b/index.html
@@ -257,20 +257,17 @@
 
                   <ul>
                     <li>
-                      10.2021 &ndash; now: postdoctoral researcher at <a href="https://www.inet.tu-berlin.de">INET, Technical University of Berlin</a>
-                    </li>
-                    <li>
-                      2021 &ndash; now: researcher in <a href="https://www.fwf.ac.at/">Austrian Science Fund (FWF)</a> project Dependable Network Data Plane for the Cloud (DELTA), I 5025-N
-                    </li>
-                    <li>
-                      2020 &ndash; now: researcher in <a href="https://www.fwf.ac.at/">Austrian Science Fund (FWF)</a> project Adversarial Design Framework for Self-Driving Networks, I 4800-N
-                    </li>
-                    <li>
-                      03.2020 &ndash; 09.2021: postdoctoral researcher at <a href="https://ct.cs.univie.ac.at">Communication Technology Group</a>, Faculty of Computer Science, University of Vienna
+                      10.2021 &ndash; now: postdoc at <a href="https://www.inet.tu-berlin.de">INET, Technical University of Berlin</a>, employed as a <a href="https://self-adjusting.net/team/maciej-pacut/">researcher</a> in <a href="https://erc.europa.eu/">ERC</a> project <a href="https://self-adjusting.net/">Self-adjusting networks</a>
                       under supervision of <a href="https://www.univie.ac.at/ct/stefan/"> Univ.-Prof. Dr.sc. Stefan Schmid</a>
                     </li>
                     <li>
-                      2020 &ndash; now: <a href="https://self-adjusting.net/team/maciej-pacut/">researcher</a> in <a href="https://erc.europa.eu/">ERC</a> project <a href="https://self-adjusting.net/">Self-adjusting networks</a>
+                      03.2020 &ndash; 09.2021: researcher in <a href="https://www.fwf.ac.at/">Austrian Science Fund (FWF)</a> project Dependable Network Data Plane for the Cloud (DELTA), I 5025-N
+                    </li>
+                    <li>
+                      03.2020 &ndash; 09.2021: researcher in <a href="https://www.fwf.ac.at/">Austrian Science Fund (FWF)</a> project Adversarial Design Framework for Self-Driving Networks, I 4800-N
+                    </li>
+                    <li>
+                      03.2020 &ndash; 09.2021: postdoctoral researcher at <a href="https://ct.cs.univie.ac.at">Communication Technology Group</a>, Faculty of Computer Science, University of Vienna
                     </li>
                     <li>
                       2019: PhD in Computer Science at <a href="http://www.ii.uni.wroc.pl/badania/zaklad/ZOK">Combinatorial Optimization Group</a>, Department of Mathematics and Computer Science, University of Wrocław, Poland under supervision of <a href="https://www.ii.uni.wroc.pl/~mbi">dr. hab. Marcin Bieńkowski</a>. PhD thesis <a href="papers/phd_maciej_pacut.pdf">"Algorithmic aspects of contemporary networks"</a>, reviewers: prof. Guy Even, Tel-Aviv University, dr. hab. Marcin Mucha, University of Warsaw
