--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                   <table>
                     <tr>
                       <td>
-                        <img alt="Maciej Pacut" src="./photo.webp" width="240" height="315">
+                        <img alt="Maciej Pacut" src="./photo.webp" height="250">
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="subscript">(photo 2020)</div>
+                        <div class="subscript">(photo 2022)</div>
                       </td>
                     </tr>
                   </table>
