--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
                 PhD student mentorship:
                 <ul>
                   <li> Julien Dallot, Technical University of Berlin, informal PhD co-advisor (main advisor: prof. Stefan Schmid) 2022&ndash;now</li>
-                  <li> <a href="https://pourdamghani.github.io">Arash Pourdamghani</a>, University of Vienna and Technical University of Berlin, informal PhD co-advisor (main advisor: prof. Stefan Schmid) 2020&ndash;now</li>
-                  <li>Mahmoud Parham, University of Vienna, Austria, informal PhD co-advisor (main advisor: prof. Stefan Schmid) 2019&ndash;now</li>
+                  <li>Mahmoud Parham, University of Vienna, Austria, informal PhD co-advisor (main advisor: prof. Stefan Schmid) 2019&ndash;2022</li>
                 </ul>
 
                 Internship supervision:
