--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
             <h1 class="section">Research</h1>
 
-            My research revolves around online algorithms for fundamental problems of computer networks and data centers. I am fortunate to collaborate with <a href="https://www.univie.ac.at/ct/stefan/">prof. Stefan Schmid</a> at TU Berlin, and we pursue a vision of <i>self-adjusting networks</i> that adapt to the traffic they serve.
+            My research revolves around online algorithms for fundamental problems of computer networks and data centers. I am fortunate to collaborate with <a href="https://schmiste.github.io">prof. Stefan Schmid</a> at TU Berlin, and we pursue a vision of <i>self-adjusting networks</i> that adapt to the traffic they serve.
 
 
             <br><br>
