--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
 
             <br><br>
             Selected papers:
+          <h2>Algorithms with Advice</h2>
+            <ul>
+              <li>
+                <b><a href="papers/infused.pdf">Online Algorithms with Randomly Infused Advice</a></b>
+                <br>
+                Yuval Emek, Yuval Gil, Maciej Pacut, Stefan Schmid<br>
+
+                (under review)
+              </li>
+            </ul>
                       <h2>Online Knapsack</h2>
             <ul>
               <li>
