--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <br>
                 Yuval Emek, Yuval Gil, Maciej Pacut, Stefan Schmid<br>
 
-                (under review)
+                European Symposium on Algorithms (<b>ESA 2023</b>)
               </li>
             </ul>
                       <h2>Online Knapsack</h2>
