--- a/index.html
+++ b/index.html
@@ -151,6 +151,22 @@
                 European Symposium on Algorithms (<b>ESA 2023</b>)
               </li>
             </ul>
+
+            <h2>Online List Access</h2>
+            <ul>
+              <li>
+                <b><a href="papers/INFOCOM23List.pdf">
+                  Self-Adjusting Partially Ordered Lists </a></b>
+                <br>
+                Vamsi Addanki, Maciej Pacut, Arash Pourdamghani, Gabor Retvari, Stefan Schmid, and Juan Vanerio<br>
+
+
+                IEEE International Conference on Computer Communications
+                (<b>INFOCOM 2023</b>)
+              </li>
+            </ul>
+
+
                       <h2>Online Knapsack</h2>
             <ul>
               <li>
