--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 
                 Internship supervision:
                 <ul>
+                  <li>Bolong Tang, KTH Sweden, project "Caching forwarding rules", 06.2023&ndash;08.2023</li>
                   <li>Amirmehdi Fesharaki, Sharif University of Technology, Iran, project "Caching with dependencies", 03.2022&ndash;09.2022</li>
                   <li>Julien Dallot, TELECOM Paris, France, project "Virtual machine migration in star topologies", 03.2022&ndash;09.2022 (the second interns)</li>
                   <li>Atoli Huppé, ENSTA Paris, France, project "Adaptive compression algorithms", 03.2022&ndash;08.2022</li>
@@ -275,8 +276,8 @@
                   <li>Local supporter of <a href="http://algo2014.ii.uni.wroc.pl">ALGO Conference</a> 2014, Wrocław, Poland</li>
                 </ul>
 
-                <p>Subreviewer for <a href="https://www.sciencedirect.com/journal/theoretical-computer-science">Theoretical Computer Science</a>, <a
-                  href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">Journal on Transactions on Parallel and Distributed Systems</a>, <a href="https://infocom2021.ieee-infocom.org/">INFOCOM</a>, <a href="https://www.sigmetrics.org/">SIGMETRICS</a>, <a href="https://dl.acm.org/conference/conext">CoNEXT</a>, <a href="https://dl.acm.org/journal/ton">IEEE/ACM Transactions on Networking</a>.</p>
+                <p>Subreviewer for conferences: DISC, SPAA, SODA, ESA, DISC, INFOCOM, SIGMETRICS, CoNEXT and more, and journals <a href="https://www.sciencedirect.com/journal/theoretical-computer-science">Theoretical Computer Science</a>, <a
+                  href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">Journal on Transactions on Parallel and Distributed Systems</a>, <a href="https://dl.acm.org/journal/ton">IEEE/ACM Transactions on Networking</a>.</p>
 
                   <h1 class="section">Short CV</h1>
 
