--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   <li>Local supporter of <a href="http://algo2014.ii.uni.wroc.pl">ALGO Conference</a> 2014, Wrocław, Poland</li>
                 </ul>
 
-                <p>Subreviewer for conferences: DISC, SPAA, SODA, ESA, DISC, INFOCOM, SIGMETRICS, CoNEXT and more, and journals <a href="https://www.sciencedirect.com/journal/theoretical-computer-science">Theoretical Computer Science</a>, <a
+                <p>Subreviewer for conferences: DISC, SPAA, SODA, ESA, INFOCOM, SIGMETRICS, CoNEXT and more, and journals <a href="https://www.sciencedirect.com/journal/theoretical-computer-science">Theoretical Computer Science</a>, <a
                   href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">Journal on Transactions on Parallel and Distributed Systems</a>, <a href="https://dl.acm.org/journal/ton">IEEE/ACM Transactions on Networking</a>.</p>
 
                   <h1 class="section">Short CV</h1>
