--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </ul>
 
                 <p>Subreviewer for conferences: DISC, SPAA, SODA, ESA, INFOCOM, SIGMETRICS, CoNEXT and more, and journals <a href="https://www.sciencedirect.com/journal/theoretical-computer-science">Theoretical Computer Science</a>, <a
-                  href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">Journal on Transactions on Parallel and Distributed Systems</a>, <a href="https://dl.acm.org/journal/ton">IEEE/ACM Transactions on Networking</a>.</p>
+                  href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">Journal on Transactions on Parallel and Distributed Systems</a>, <a href="https://dl.acm.org/journal/ton">IEEE/ACM Transactions on Networking</a> and more.</p>
 
                   <h1 class="section">Short CV</h1>
 
