--- a/index.html
+++ b/index.html
@@ -231,6 +231,21 @@
             <h2>Online Caching</h2>
             <ul>
               <li>
+                <b><a href="#">Dependency-Aware Online Caching</a></b>
+                <a href="#">[cite bibtex]</a>
+                <br>
+                Julien Dallot, Amirmehdi Fesharaki, Maciej Pacut, Stefan Schmid<br>
+
+
+                IEEE International Conference on Computer Communications
+               (<b>INFOCOM 2024</b>)
+
+              </li>
+            </ul>
+
+
+            <ul>
+              <li>
                 <b><a href="papers/treecaching-spaa2017.pdf">Online Tree Caching</a></b>
                 <a href="bibtex/treecaching-spaa2017.bib">[cite bibtex]</a>
                 <br>
