--- a/index.html
+++ b/index.html
@@ -141,11 +141,37 @@
 
             <br><br>
             Selected papers:
+            <h3>Online Algorithms with Predictions</h3>
+            <ul>
+              <li>
+                <b><a href="#">
+Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
+</a></b>
+                <br>
+                Vamsi Addanki, Maciej Pacut, Stefan Schmid<br>
+
+    USENIX Symposium on Networked Systems Design and Implementation
+               (<b>NSDI 2024</b>)
+
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                <b><a href="papers/infused.pdf">Online Algorithms with Randomly Infused Advice</a></b>
+                <br>
+                Yuval Emek, Yuval Gil, Maciej Pacut, Stefan Schmid<br>
+
+                European Symposium on Algorithms (<b>ESA 2023</b>)
+              </li>
+            </ul>
+
+
+
             <h3>Online Caching</h3>
             <ul>
               <li>
                 <b><a href="#">Dependency-Aware Online Caching</a></b>
-                <a href="#">[cite bibtex]</a>
                 <br>
                 Julien Dallot, Amirmehdi Fesharaki, Maciej Pacut, Stefan Schmid<br>
 
@@ -160,7 +186,6 @@
             <ul>
               <li>
                 <b><a href="papers/treecaching-spaa2017.pdf">Online Tree Caching</a></b>
-                <a href="bibtex/treecaching-spaa2017.bib">[cite bibtex]</a>
                 <br>
                 Marcin Bienkowski, Jan Marcinkowski, Maciej Pacut, Stefan Schmid, Aleksandra Spyra<br>
 
@@ -168,18 +193,6 @@
                 ACM Symposium on Parallelism in Algorithms and Architectures (<b>SPAA 2017</b>)
 
 
-              </li>
-            </ul>
-
-
-          <h3>Algorithms with Advice</h3>
-            <ul>
-              <li>
-                <b><a href="papers/infused.pdf">Online Algorithms with Randomly Infused Advice</a></b>
-                <br>
-                Yuval Emek, Yuval Gil, Maciej Pacut, Stefan Schmid<br>
-
-                European Symposium on Algorithms (<b>ESA 2023</b>)
               </li>
             </ul>
 
@@ -204,7 +217,6 @@
                 <b><a href="papers/knapsack-icalp2020.pdf">An Optimal Algorithm for Online Multiple Knapsack</a></b>
                 <a href=" https://www.youtube.com/watch?v=3DeDTKDSkbE">[vid]</a>
                 <a href="slides/knapsack-icalp2020.pdf">[slides]</a>
-                <a href="bibtex/knapsack-icalp2020.bib">[cite bibtex]</a>
                 <br>
                 Marcin Bienkowski, Maciej Pacut, Krzysztof Piecuch<br>
 
@@ -217,7 +229,6 @@
               <li>
 
                 <b><a href="./papers/graphpartition-optimal.pdf"> Optimal Online Balanced Graph Partitioning</a></b>
-                <a href="bibtex/graphpartition-infocom2021.bib">[cite bibtex]</a>
                 <br>
                 Maciej Pacut, Mahmoud Parham, Stefan Schmid<br>
 
@@ -230,7 +241,6 @@
                 <b><a href="papers/lb_graphpartition_podc2020.pdf">Deterministic Lower Bound
                   for Dynamic Balanced Graph Partitioning
                 </a></b>
-                <a href="bibtex/lb_graphpartition-podc2020.bib">[cite bibtex]</a>
                 <br>
                 Maciej Pacut, Mahmoud Parham, Stefan Schmid<br>
 
@@ -240,7 +250,6 @@
               </li>
               <li>
                 <b><a href="papers/graphpartition-sidma2020.pdf">Dynamic Balanced Graph Partitioning</a></b>
-                <a href="bibtex/graphpartition-sidma2020.bib">[cite bibtex]</a>
                 <br>
                 Chen Avin, Marcin Bienkowski, Andreas Loukas, Maciej Pacut, Stefan Schmid<br>
 
@@ -250,7 +259,6 @@
               </li>
               <li>
                 <b><a href="papers/graphpartition-disc2016.pdf">Online Balanced Repartitioning</a></b>
-                <a href="bibtex/graphpartition-disc2016.bib">[cite bibtex]</a>
                 <br>
                 Chen Avin, Andreas Loukas, Maciej Pacut, Stefan Schmid<br>
 
