--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h3>Online Algorithms with Predictions</h3>
             <ul>
               <li>
-                <b><a href="#">
+                <b><a href="./papers/buffersharing-nsdi2024.pdf">
 Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
 </a></b>
                 <br>
