--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       font-size: 1.5em;
       font-weight: bold;
     }
+    h2 {
+      font-size: 1.1em;
+      font-weight: bold;
+    }
     .section {
       padding-bottom: 1%;
       margin-top: 6%;
@@ -141,7 +145,7 @@
 
             <br><br>
             Selected papers:
-            <h3>Online Algorithms with Predictions</h3>
+            <h2>Online Algorithms with Predictions</h2>
             <ul>
               <li>
                 <b><a href="#">
@@ -168,7 +172,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
 
 
 
-            <h3>Online Caching</h3>
+            <h2>Online Caching</h2>
             <ul>
               <li>
                 <b><a href="#">Dependency-Aware Online Caching</a></b>
@@ -196,7 +200,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
               </li>
             </ul>
 
-            <h3>Online List Access</h3>
+            <h2>Online List Access</h2>
             <ul>
               <li>
                 <b><a href="papers/INFOCOM23List.pdf">
@@ -211,7 +215,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
             </ul>
 
 
-                      <h3>Online Knapsack</h3>
+                      <h2>Online Knapsack</h2>
             <ul>
               <li>
                 <b><a href="papers/knapsack-icalp2020.pdf">An Optimal Algorithm for Online Multiple Knapsack</a></b>
@@ -224,7 +228,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
                 International Colloquium on Automata, Languages and Programming, Track A (<b>ICALP 2020</b>)
               </li>
             </ul>
-            <h3>Online Graph Partitioning</h3>
+            <h2>Online Graph Partitioning</h2>
             <ul>
               <li>
 
