--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
             <h2>Online Caching</h2>
             <ul>
               <li>
-                <b><a href="#">Dependency-Aware Online Caching</a></b>
+                <b><a href="./papers/caching-INFOCOM2024.pdf">Dependency-Aware Online Caching</a></b>
                 <br>
                 Julien Dallot, Amirmehdi Fesharaki, Maciej Pacut, Stefan Schmid<br>
 
