--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Maciej Pacut, postdoctoral researcher at
   Faculty of Computer Science, Technical University of Berlin. Online algorithms for
   networks and data centers.">
-  <meta name="keywords" content="maciej,pacut,maciek,online,algorithms,knapsack,advice,communication,technology,vienna,berlin,postdoc,postdoctoral,researcher,grant,computer,science,papers,publications,algorithms,networks,networking">
+  <meta name="keywords" content="maciej,pacut,online,algorithms,knapsack,advice,communication,technology,vienna,berlin,postdoc,researcher,grant,computer,science,papers,algorithms,networks">
   <meta name="author" content="Maciej Pacut">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="script-src 'none'; object-src 'none'">
