--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     }
     a:link {
       color: rgb(160,0,0);
-      text-decoration: none;
+      text-decoration-style: dotted;
     }
     a:visited {
       color: rgb(160,0,0);
-      text-decoration: none;
+      text-decoration-style: dashed;
     }
     a[href]:hover {
-      text-decoration: underline;
+      text-decoration-style: solid;
     }
     li {
       margin-bottom: 2%;
