--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
 
                 Internship supervision:
                 <ul>
-                  <li>Levente Birszki, Eotvos Lorand University, Hungary, project "Prediction-augmented algorithms for quantile approximation", 07.2024&ndash;08.2024</li>
+                  <li>Levente Birszki, Eötvös Loránd University, Hungary, project "Prediction-augmented algorithms for quantile approximation", 07.2024&ndash;08.2024</li>
                   <li>Bolong Tang, KTH Sweden, project "Caching forwarding rules", 06.2023&ndash;08.2023</li>
                   <li>Amirmehdi Fesharaki, Sharif University of Technology, Iran, project "Caching with dependencies", 03.2022&ndash;09.2022</li>
                   <li>Julien Dallot, TELECOM Paris, France, project "Virtual machine migration in star topologies", 03.2022&ndash;09.2022 (the second interns)</li>
