--- a/index.html
+++ b/index.html
@@ -273,6 +273,11 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
               </li>
             </ul>
 
+              <h1 class="section">Projects</h1>
+              
+              <a href="">Formalizing competitive analysis of online algorithms in Lean 4 theorem prover.</a>
+
+
               <h1 class="section">Duties / opportunities</h1>
 
               <p> Host of <a href="https://maciej.pacut.pl/net-theory">networking theory research seminar</a> at <a href="https://ct.cs.univie.ac.at">Communication Technologies Group</a>, University of Vienna, and <a href="https://www.inet.tu-berlin.de">INET TU Berlin</a>. </p>
