--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Credence: Augmenting Datacenter Switch Buffer Sharing with ML Predictions
 
               <h1 class="section">Projects</h1>
               
-              <a href="">Formalizing competitive analysis of online algorithms in Lean 4 theorem prover.</a>
+              <a href="https://formalizing-online-algorithms.github.io/">Formalizing competitive analysis of online algorithms in Lean 4 theorem prover.</a>
 
 
               <h1 class="section">Duties / opportunities</h1>
